[package]
name = "flynn_labs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
yew = "0.19"
yew-router = "0.16"
gloo-events = "0.1.2"
gloo-utils = "0.1.4"
# hello_lib = { path = "../hello_lib" }
# ncaa_data_rs = { path = "../ncaa-data-rs" }
material-yew = {version = "0.2", features = ["full"] }