[package]
name = "flynn_labs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-hooks = "0.3.0"
gloo-events = "0.1.2"
gloo-utils = "0.1.4"
gloo = "0.11.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
# hello_lib = { path = "../hello_lib" }
ncaa_data_rs = { version = "0.2.7", features = [ "proxy" ] }
chrono = "0.4"
chrono-tz = "0.8.6"
charming = {version = "0.4.0", features = [ "wasm" ] }

[lib]
name = "components"
path = "./components/lib.rs"

[[bin]]
name = "flynn_labs"
path = "./main.rs"
