load("@rules_rust//rust:defs.bzl", "rust_library")


rust_library(
    name = "components",
    srcs = glob(["**/*.rs"]),
    deps = [
        "@crates//:yew",
        "@crates//:yew-router",
        "@crates//:yew-hooks",
        "@crates//:ncaa_data_rs",
        "@crates//:gloo",
        "@crates//:wasm-bindgen",
    ],
    visibility = ["//visibility:public"],
)